--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Connect Four</title>
-	<link rel="stylesheet" type="text/css" href="style.min.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	<meta name="viewport" content="width=800" />
 	<meta name="Description" content="Play the classic game Connect Four!">
 </head>
+<div id="uiblocker"></div>
 
 <body>
 	<div id="gameboard"></div>
 </body>
-<script type="text/javascript" src="connect_four.min.js"></script>
+<script type="text/javascript" src="connect_four.js"></script>
 
 </html>
