--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <div id="uiblocker"></div>
 
 <body>
+	<header>
+		<h1>Connect Four</h1>
+	</header>
+	<div id="floatingCircles"></div>
 	<div id="gameboard"></div>
 </body>
 <script type="text/javascript" src="connect_four.js"></script>
