boucing peices changes, github link, start over button, update text

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 <body>
 	<header>
 		<h1>Connect Four</h1>
+		<a id="gitHubLink" href="https://github.com/ShaneMarusczak/Connect-Four" target="_blank" rel="noreferrer"><img
+				id="githubicon" src="github-icon.jpg"></a>
 	</header>
-	<div id="floatingCircles"></div>
-	<div id="gameboard"></div>
+	<div id="main">
+		<div id="floatingCircles"></div>
+		<div id="gameboard"></div>
+	</div>
+	<footer>
+		<p id="strtOvrBtn">Start Over</p>
+		<p id="updateText">Last Updated: May 9, 2020</p>
+	</footer>
 </body>
 <script type="text/javascript" src="connect_four.js"></script>
 
