--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Connect Four</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="style.min.css" />
 	<meta name="viewport" content="width=800" />
 	<meta name="Description" content="Play the classic game Connect Four!">
 </head>
 <div id="uiblocker"></div>
+<div id="alertshader">
+	<div id="alert">
+		<span id="alertmessage"></span>
+	</div>
+</div>
 
 <body>
 	<header>
@@ -25,6 +30,6 @@
 		<p id="updateText">Last Updated: May 9, 2020</p>
 	</footer>
 </body>
-<script type="text/javascript" src="connect_four.js"></script>
+<script type="text/javascript" src="connect_four.min.js"></script>
 
 </html>
