--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 		<p id="updateText">Last Updated: May 11, 2020</p>
 	</footer>
 </body>
-<script type="text/javascript" src="connect_four.js"></script>
+<script type="text/javascript" src="connect_four.min.js"></script>
 
 </html>
