--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 	<header>
-		<a id="homeLink" href="https://github.com/ShaneMarusczak/Games-Home-Page" rel="noreferrer"><img id="homeIcon"
+		<a id="homeLink" href="https://marusczak.com/Games-Home-Page" rel="noreferrer"><img id="homeIcon"
 				src="house-icon.png"></a>
 		<a id="gitHubLink" href="https://github.com/ShaneMarusczak/Connect-Four" target="_blank" rel="noreferrer"><img
 				id="githubicon" src="github-icon.jpg"></a>
