the instructions box stays and the chose pieces goes to the center

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<p id="instructions">Choose Red or Yellow</p>
 			<p id="intSubText">Red plays first!</p>
 			<div id="choosePieces">
-				<div id="selectRed"></div>
-				<div id="selectYellow"></div>
+				<div id="selectRed" class="pointerCursor"></div>
+				<div id="selectYellow" class="pointerCursor"></div>
 			</div>
 		</div>
 		<div id="floatingCircles"></div>
@@ -38,7 +38,7 @@
 	</div>
 	<footer>
 		<p id="strtOvrBtn">Start Over</p>
-		<p id="updateText">Last Updated: May 14, 2020</p>
+		<p id="updateText">Last Updated: May 16, 2020</p>
 	</footer>
 </body>
 <script type="text/javascript" src="connect_four.min.js"></script>
