computer player improvements

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	</div>
 	<footer>
 		<p id="strtOvrBtn">Start Over</p>
-		<p id="updateText">Last Updated: May 16, 2020</p>
+		<p id="updateText">Last Updated: May 17, 2020</p>
 	</footer>
 </body>
-<script type="text/javascript" src="connect_four.min.js"></script>
+<script type="text/javascript" src="connect_four.js"></script>
 
 </html>
