here is the crazy code

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 		<p id="updateText">Last Updated: May 18, 2020</p>
 	</footer>
 </body>
-<script type="text/javascript" src="connect_four.min.js"></script>
+<script type="text/javascript" src="connect_four.js"></script>
 
 </html>
