--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				id="githubicon" src="github-icon.jpg"></a>
 	</header>
 	<div id="main">
-		<div id="choice">
+		<div id="choice" class="shadowBox">
 			<h1>Connect Four</h1>
 			<p id="instructions">Choose Red or Yellow</p>
 			<p id="intSubText">Red plays first!</p>
@@ -33,13 +33,13 @@
 			</div>
 		</div>
 		<div id="floatingCircles"></div>
-		<div id="gameboard"></div>
+		<div id="gameboard" class="shadowBox"></div>
 	</div>
 	<footer>
-		<p id="strtOvrBtn">Start Over</p>
-		<p id="updateText">Last Updated: May 18, 2020</p>
+		<p id="strtOvrBtn" class="shadowBox">Start Over</p>
+		<p id="updateText">Last Updated: June 9, 2020</p>
 	</footer>
 </body>
-<script type="text/javascript" src="connect_four.js"></script>
+<script type="text/javascript" src="connect_four.min.js"></script>
 
 </html>
