--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 	</div>
 	<footer>
 		<p id="strtOvrBtn" class="shadowBox">Start Over</p>
-		<p id="updateText">Last Updated: June 9, 2020</p>
+		<p id="updateText">Last Updated: July 23, 2020</p>
 	</footer>
 </body>
+<script type="text/javascript" src="https://marusczak.com/BuildingBlocks/buildingBlocks.min.js"></script>
 <script type="text/javascript" src="connect_four.min.js"></script>
 
 </html>
