--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Connect Four</title>
 	<link rel="stylesheet" type="text/css" href="style.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://marusczak.com/BuildingBlocks/css/modal.min.css" />
 	<meta name="Description" content="Play the classic game Connect Four!">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
@@ -35,7 +36,8 @@
 		<p id="updateText">Last Updated: July 23, 2020</p>
 	</footer>
 </body>
-<script type="text/javascript" src="https://marusczak.com/BuildingBlocks/buildingBlocks.min.js"></script>
+<script type="text/javascript" src="https://marusczak.com/BuildingBlocks/js/buildingBlocks.min.js"></script>
+<script type="text/javascript" src="https://marusczak.com/BuildingBlocks/js/modal.min.js"></script>
 <script type="text/javascript" src="connect_four.min.js"></script>
 
 </html>
